修改图片地址

--- a/docs/java/java基础/基础数据类型.md
+++ b/docs/java/java基础/基础数据类型.md
@@ -32,15 +32,15 @@ boolean代表1bit，但是其“大小”并不是精确定义的，由编译器
 
 ### Number
 
-![Image text](https://bucket-sharit-beijing.oss-cn-beijing.aliyuncs.com/blog/images/java-1.png)
+![Image text](../../.images/java-1.png)
 
 ### Character
 
-![Image text](https://bucket-sharit-beijing.oss-cn-beijing.aliyuncs.com/blog/images/java-2.png)
+![Image text](../../.images/java-2.png)
 
 ### Boolean
 
-![Image text](https://bucket-sharit-beijing.oss-cn-beijing.aliyuncs.com/blog/images/java-3.png)
+![Image text](../../.images/java-3.png)
 
 ## 类型转换
 
