--- a/docs/java/jvm/类加载.md
+++ b/docs/java/jvm/类加载.md
@@ -9,7 +9,7 @@ tags:
 
 类加载生命周期：
 
-<img src="https://bucket-sharit-beijing.oss-cn-beijing.aliyuncs.com/blog/images/jvm-001.png" style="zoom:50%;" />
+<img src="../../.images/jvm-001.png" style="zoom:50%;" />
 
 
 
@@ -51,7 +51,7 @@ public class Preparation {
 
 初始化阶段就是执行方法`<clinit>()`的过程。此方法不需要定义，是javac编译器自动收集类中的所有静态变量的赋值动作和静态代码块中的语句合并而来。
 
-![](https://bucket-sharit-beijing.oss-cn-beijing.aliyuncs.com/blog/images/jvm-002.png)
+![](../../.images/jvm-002.png)
 
 > `<clinit>()`不同于类的构造器，构造器是虚拟机视角下的`<init>()`方法。
 
@@ -169,7 +169,7 @@ t2: class Test initing...
 
 ### 类加载器
 
-<img src="https://bucket-sharit-beijing.oss-cn-beijing.aliyuncs.com/blog/images/jvm-003.png" style="zoom: 50%;" />
+<img src="../../.images/jvm-003.png" style="zoom: 50%;" />
 
 类唯一性：
 
