--- a/docs/设计模式/笔记.md
+++ b/docs/设计模式/笔记.md
@@ -11,7 +11,7 @@ tags:
 
 ## 六大原则
 
-<img src="https://bucket-sharit-beijing.oss-cn-beijing.aliyuncs.com/blog/images/dp-001.png" style="zoom:50%;" />
+<img src="../.images/dp-001.png" style="zoom:50%;" />
 
 ### 开闭原则
 
@@ -39,7 +39,7 @@ tags:
 
 ## 设计模式分类
 
-<img src="https://bucket-sharit-beijing.oss-cn-beijing.aliyuncs.com/blog/images/dp-002.png" style="zoom:50%;" />
+<img src="../.images/dp-002.png" style="zoom:50%;" />
 
 - 创建型，共5种：**工厂方法模式、抽象工厂模式**、**单例模式**、建造者模式、**原型模式。**
 - 结构型，共7种：适配器模式、装饰器模式、代理模式、外观模式、桥接模式、组合模式、享元模式。
