--- a/docs/java/jvm/垃圾收集器.md
+++ b/docs/java/jvm/垃圾收集器.md
@@ -78,7 +78,7 @@ GC Roots:
 - 新生代采用复制算法，暂停所有用户线程。
 - 老年代采用标记压缩算法，暂停所有用户线程。
 
-<img src="https://bucket-sharit-beijing.oss-cn-beijing.aliyuncs.com/blog/images/jvm-014.png" style="zoom:50%;" />
+<img src="../../.images/jvm-014.png" style="zoom:50%;" />
 
 ### ParNew
 
@@ -100,7 +100,7 @@ Parallel Old是Parallel Scavenge收集器的老年代版本，使用多线程和
 
 CMS(concurrent mark sweep)收集器是一种以获取最短回收暂停时间为目标的收集器。
 
-<img src="https://bucket-sharit-beijing.oss-cn-beijing.aliyuncs.com/blog/images/jvm-015.png" style="zoom:50%;" />
+<img src="../../.images/jvm-015.png" style="zoom:50%;" />
 
 整理过程
 
